Corrigiendo error que evitaba poblar los inputs al momento de actualizar un alumno

--- a/src/app/components/recepcion/clientes/lista-titulares/form-titular.component.html
+++ b/src/app/components/recepcion/clientes/lista-titulares/form-titular.component.html
@@ -1,5 +1,5 @@
 <div class="card bg-dark text-white rounded-0" style="height: 100vh;">
-  <div class="card-header">Datos del Alumno</div>
+  <div class="card-header">Datos del Titular</div>
   <div class="card-body">
 
     <form>
