--- a/src/app/components/recepcion/clientes/lista-titulares/lista-titulares.component.html
+++ b/src/app/components/recepcion/clientes/lista-titulares/lista-titulares.component.html
@@ -5,7 +5,7 @@
   
       <table class="table table-bordered table-striped">
         <thead>
-            <tr>
+            <tr style="font-size: 14px;">
               <th>Id</th>
               <th>Nombre</th>
               <th>Salario</th>
