--- a/src/app/components/recepcion/registro/registro.component.html
+++ b/src/app/components/recepcion/registro/registro.component.html
@@ -72,7 +72,7 @@
                         <p>{{ telefonoTitular.telefono }}</p>
                       </div>
                       <div class="col-sm-6">
-                        <div class="d-flex flex-row">
+                        <!-- <div class="d-flex flex-row">
                           <div class="custom-control custom-checkbox pr-1">
                             <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
                             <label class="custom-control-label" for="defaultUnchecked">Empleado</label>
@@ -81,7 +81,7 @@
                             <input type="checkbox" class="custom-control-input" id="defaultUncheck">
                             <label class="custom-control-label" for="defaultUncheck">Independiente</label>
                           </div>
-                        </div>
+                        </div> -->
                         <!-- <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
                                     <label class="custom-control-label" for="defaultUnchecked">Hogar</label>
@@ -116,7 +116,7 @@
                   </div> -->
               <div class="col-sm-2 pl-3">
                 <input type="text" placeholder="Ingreso Mensual" [(ngModel)]="titular.salario" name="salario" required>
-                <p>{{ titular.salario }}</p>
+                <!-- <p>{{ titular.salario }}</p> -->
               </div>
               <div class="col-sm-2">
                 <!-- <input type="email" placeholder="Email" required> -->
