--- a/src/app/components/recepcion/clientes/lista-titulares/form-titular.component.html
+++ b/src/app/components/recepcion/clientes/lista-titulares/form-titular.component.html
@@ -42,7 +42,7 @@
       <div class="form-group row">
         <label for="telefono" class="col-form-label col-sm-2">Telefono</label>
         <div class="col-sm-4">
-          <input type="text" class="form-control" [(ngModel)]="telefonoTitular.telefono" name="telefono">
+          <input type="text" class="form-control" [(ngModel)]="telefonoTitular.telefono" name="telef">
         </div>
       </div>
 
