--- a/src/app/components/recepcion/clientes/lista-alumnos/form-alumno.component.html
+++ b/src/app/components/recepcion/clientes/lista-alumnos/form-alumno.component.html
@@ -27,7 +27,7 @@
       <div class="form-group row">
         <label for="email" class="col-form-label col-sm-2">Telefono</label>
         <div class="col-sm-4">
-          <input type="text" class="form-control" [(ngModel)]="telefonoAlumno.telefono" name="telefono">
+          <input type="text" class="form-control" [(ngModel)]="telefonoAlumno.telefono" name="telef">
         </div>
       </div>
 
