--- a/src/app/components/recepcion/reserva/reserva.component.html
+++ b/src/app/components/recepcion/reserva/reserva.component.html
@@ -1,12 +1,12 @@
 <div style="height: 100vh;">
-  <div class="card border-primary mb-3 my-3">
+  <div class="card mb-3">
     <div class="card-header">Lista de Reservas</div>
     <div class="card-body text-primary">
       <!-- <h5 class="card-title">Listado de Titulares</h5> -->
   
       <table class="table table-bordered table-striped">
         <thead>
-            <tr>
+            <tr class="text-justify" style="font-size: 13px;">
               <!-- <th>ID</th> -->
               <th>Fecha</th>
               <th>Hora</th>
@@ -14,12 +14,12 @@
               <th>Unidad</th>
               <th>Tutoria</th>
               <th>Tutor</th>
-              <!-- <th>Reservas</th> -->
+              <th class="text-center">Reservar</th>
               <!-- <th>Eliminar</th> -->
             </tr>
         </thead>
         <tbody>
-          <tr style="font-size: 14px;" *ngFor="let item of reservas">
+          <tr class="text-justify" style="font-size: 13px;" *ngFor="let item of reservas">
             <!-- <td>{{ item.id }}</td> -->
             <td>{{ item.fecha }}</td>
             <td>{{ item.hora }}</td>
@@ -27,9 +27,9 @@
             <td>{{ item.unidad }}</td>
             <td>{{ item.tutoria }}</td>
             <td>{{ item.tutor }}</td>
-            <!-- <td>
-              <button type="button" name="edit" class="btn btn-primary btn-sm" [routerLink]="['/reservas/form',item.id]" routerLinkActive="router-link-active" >Reservas</button>
-            </td> -->
+            <td class="text-center">
+              <button type="button" name="edit" class="btn btn-primary btn-sm" [routerLink]="['/reservas/form',item.id]" routerLinkActive="router-link-active" >Reservar</button>
+            </td>
             <!-- <td>
               <button type="button" name="delete" (click)='delete(titular)' class="ml-1 btn btn-danger btn-sm">Delete</button>
             </td> -->
