--- a/src/app/components/recepcion/registro/registro.component.html
+++ b/src/app/components/recepcion/registro/registro.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-lg-2">
       <mat-form-field>
-        <input matInput [matDatepicker]="picker" [(ngModel)]="contrato.fecha_contrato" (change)="mostrarfecha()" name="fecha_contrato" placeholder="Fecha de Matricula">
+        <input matInput [matDatepicker]="picker" [(ngModel)]="contrato.fechaContrato" (change)="mostrarfecha()" name="fecha_contrato" placeholder="Fecha de Matricula">
         <mat-datepicker-toggle matSuffix [for]="picker" (change)="mostrarfecha()"></mat-datepicker-toggle>
         <mat-datepicker #picker (change)="mostrarfecha()"></mat-datepicker>
       </mat-form-field>
