--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="fondo">
-  <app-login (usuarioLogeado)="setLogeado($event)" *ngIf="!getLoginStatus()"></app-login>
+  <app-login (usuarioLogeado)="setLogeado($event)" *ngIf="getLoginStatus()"></app-login>
 
-  <div *ngIf="getLoginStatus()">
+  <div *ngIf="!getLoginStatus()">
     <div class="container-fluid pl-0">
       <div class="row">
         <div class="col-md-2 pr-0">
-          <app-panel></app-panel>
+          <app-panel [usuario]="usuarioLogeado"></app-panel>
         </div>
         <div class="col-md-10 pl-0 pr-0 bg-light">
           <!-- Ingresar componentes a mostrar -->
