--- a/src/app/components/recepcion/clientes/cliente-principal.component.html
+++ b/src/app/components/recepcion/clientes/cliente-principal.component.html
@@ -3,10 +3,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav d-flex justify-content-between">
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="titulares">Lista de Titulares</a>
+              <a class="nav-link" href="#" routerLink="titulares">Titulares</a>
             </li>
             <li class="nav-item active" routerLinkActive="active">
-                <a class="nav-link" href="#" routerLink="alumnos">Lista de Alumnos</a>
+                <a class="nav-link" href="#" routerLink="alumnos">Alumnos</a>
               </li>
           </ul>
         </div>
