--- a/src/app/components/administracion/pagos/atrasado/atrasado.component.html
+++ b/src/app/components/administracion/pagos/atrasado/atrasado.component.html
@@ -14,6 +14,18 @@
                   <th>Saldo</th>
                 </tr>
               </thead>
+              <tbody>
+                <tr class="text-justify" style="font-size: 13px;" *ngFor="let item of atrasados">
+                  <td>{{ item.id }}</td>
+                  <td>{{ item.nombre }}</td>
+                  <td>{{ item.fecha_pago }}</td>
+                  <td>{{ item.valor_pagar }}</td>
+                  <td>{{ item.saldo_pendiente }}</td>
+                  <td>
+                    <button type="button" name="edit" class="btn btn-primary btn-sm" >Pagar</button>
+                  </td>
+                </tr>
+              </tbody>
             </table>
           </div>
         </div>
