--- a/src/app/components/administracion/pagos/pendiente/pendiente.component.html
+++ b/src/app/components/administracion/pagos/pendiente/pendiente.component.html
@@ -11,8 +11,21 @@
                 <th>Fecha Pago</th>
                 <th>Monto</th>
                 <th>Saldo</th>
+                <th>Pago</th>
               </tr>
             </thead>
+            <tbody>
+              <tr class="text-justify" style="font-size: 13px;" *ngFor="let item of pendientes">
+                <td>{{ item.id }}</td>
+                <td>{{ item.nombre }}</td>
+                <td>{{ item.fecha_pago }}</td>
+                <td>{{ item.valor_pagar }}</td>
+                <td>{{ item.saldo_pendiente }}</td>
+                <td>
+                  <button type="button" name="edit" class="btn btn-primary btn-sm" >Pagar</button>
+                </td>
+              </tr>
+            </tbody>
           </table>
         </div>
       </div>
