--- a/src/app/components/administracion/pagos/pendiente/pendiente.component.html
+++ b/src/app/components/administracion/pagos/pendiente/pendiente.component.html
@@ -1,8 +1,9 @@
 <div class="container my-2 ml-0 mr-0 p-0">
+  <button class="btn btn-primary mb-1" (click)="generarPDF()">Generar PDF</button>
   <div class="row justify-content-center">
     <div class="col-lg-12">
       <div class="card">
-        <div class="card-body text-primary">
+        <div id="pendiente" class="card-body text-primary">
           <table class="table table-bordered table-striped" style="font-size: 0.8rem;">
             <thead class="bg-danger">
               <tr>
@@ -22,7 +23,7 @@
                 <td>{{ item.valor_pagar }}</td>
                 <td>{{ item.saldo_pendiente }}</td>
                 <td>
-                  <button type="button" name="edit" class="btn btn-primary btn-sm" >Pagar</button>
+                  <button type="button" name="edit" class="btn btn-primary btn-sm" (click)=realizarPago(item.mensualidad_id)>Pagar</button>
                 </td>
               </tr>
             </tbody>
