--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -19,7 +19,9 @@
           <div class="container pl-0 pr-0">
             <div class="row justify-content-center" routerLinkActive="active">
               <a class="nav-link" href="#" routerLink="/reserva">
-                <p class="text-light" style="font-size: .8rem">Reserva de Tutorias</p>
+                <p class="text-light" style="font-size: .8rem">
+                  <i class="fas fa-ticket-alt"></i>
+                  Reserva de Tutorias</p>
               </a>
             </div>
           </div>
@@ -29,7 +31,9 @@
           <div class="container">
             <div class="row justify-content-center" routerLinkActive="active">
               <a class="nav-link" href="#" routerLink="/registro">
-                <p class="text-light" style="font-size: .8rem">Registro de Matriculas</p>
+                <p class="text-light" style="font-size: .8rem">
+                  <i class="fas fa-user-graduate"></i>
+                  Registro de Matriculas</p>
               </a>
             </div>
           </div>
@@ -49,20 +53,13 @@
           <div class="container">
             <div class="row justify-content-center" routerLinkActive="active">
               <a class="nav-link" href="#" routerLink="/record">
-                <p class="text-light" style="font-size: .8rem">Record de Produccion</p>
+                <p class="text-light" style="font-size: .8rem">
+                  <i class="fas fa-th-list"></i>
+                  Record de Produccion</p>
               </a>
             </div>
           </div>
         </li>
-        <!-- <li class="nav-item">
-          <div class="container">
-            <div class="row justify-content-center" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="/lista">
-                <p class="text-light" style="font-size: .8rem">Lista de Clientes</p>
-              </a>
-            </div>
-          </div>
-        </li> -->
       </ul>
     </div>
     <!-- Seccion Administrador -->
@@ -80,7 +77,9 @@
           <div class="container">
             <div class="row justify-content-center" routerLinkActive="active">
               <a class="nav-link" href="#" routerLink="/lista">
-                <p class="text-light" style="font-size: .8rem">Lista de Clientes</p>
+                <p class="text-light" style="font-size: .8rem">
+                  <i class="fas fa-address-book"></i>
+                  Lista de Clientes</p>
               </a>
             </div>
           </div>
@@ -90,7 +89,9 @@
           <div class="container">
             <div class="row justify-content-center" routerLinkActive="active">
               <a class="nav-link" href="#" routerLink="/pagos">
-                <p class="text-light" style="font-size: .8rem">Pagos de Mensualidad</p>
+                <p class="text-light" style="font-size: .8rem">
+                  <i class="fas fa-dollar-sign"></i>
+                  Pagos de Mensualidad</p>
               </a>
             </div>
           </div>
@@ -100,7 +101,9 @@
           <div class="container">
             <div class="row justify-content-center" routerLinkActive="active">
               <a style="font-size: 0.8rem;  color: white;" class="nav-link" href="#" routerLink="/estado-cuenta">
-                <p class="text-light" style="font-size: .8rem">Estado Cuenta</p>
+                <p class="text-light" style="font-size: .8rem">
+                  <i class="fas fa-wallet"></i>
+                  Estado Cuenta</p>
               </a>
             </div>
           </div>
@@ -109,8 +112,10 @@
         <li class="nav-item">
           <div class="container">
             <div class="row justify-content-center" routerLinkActive="active">
-              <a style="font-size: 0.8rem;  color: white;" class="nav-link" href="#" routerLink="/reportes">
-                <p class="text-light" style="font-size: .8rem">Reportes</p>
+              <a style="font-size: 0.8rem;  color: white;" class="nav-link" href="#" routerLink="/mantenimiento">
+                <p class="text-light" style="font-size: .8rem">
+                  <i class="fas fa-tools"></i>
+                  Mantenimiento</p>
               </a>
             </div>
           </div>
