--- a/src/app/components/administracion/pagos/pagos/pagos.component.html
+++ b/src/app/components/administracion/pagos/pagos/pagos.component.html
@@ -11,6 +11,9 @@
         <li class="nav-item active" routerLinkActive="active">
           <a class="nav-link" href="#" routerLink="cancelados">Cancelados</a>
         </li>
+        <li class="nav-item active" routerLinkActive="active">
+          <a class="nav-link" href="#" routerLink="totales">Historial Completo</a>
+        </li>
       </ul>
     </div>
   </nav>
