--- a/src/app/components/administracion/pagos/pendiente/pendiente.component.html
+++ b/src/app/components/administracion/pagos/pendiente/pendiente.component.html
@@ -23,7 +23,8 @@
                 <td>{{ item.valor_pagar }}</td>
                 <td>{{ item.saldo_pendiente }}</td>
                 <td>
-                  <button type="button" name="edit" class="btn btn-primary btn-sm" (click)=realizarPago(item.mensualidad_id)>Pagar</button>
+                  <button type="button" name="edit" class="btn btn-primary btn-sm"
+                    (click)=realizarPago(item.mensualidad_id)>Pagar</button>
                 </td>
               </tr>
             </tbody>
