--- a/src/app/components/recepcion/clientes/lista-alumnos/form-alumno.component.html
+++ b/src/app/components/recepcion/clientes/lista-alumnos/form-alumno.component.html
@@ -47,10 +47,13 @@
 
       <div class="form-group row">
         <div class="col-sm-4">
-          <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!alumno.id else elseBlock">Crear</button>
+          <button class="btn btn-primary" role="button" (click)='create()'
+            *ngIf="!alumno.id else elseBlock">Crear</button>
 
           <ng-template #elseBlock>
-            <button class="btn btn-primary" role="button" (click)='update()'>Editar</button>
+            <button class="btn btn-primary" role="button" (click)='update()'>
+              <i class="fas fa-user-edit"></i>
+              Editar</button>
           </ng-template>
         </div>
       </div>
