--- a/src/app/components/recepcion/clientes/lista-titulares/form-titular.component.html
+++ b/src/app/components/recepcion/clientes/lista-titulares/form-titular.component.html
@@ -66,7 +66,9 @@
             *ngIf="!titular.id else elseBlock">Crear</button>
 
           <ng-template #elseBlock>
-            <button class="btn btn-primary" role="button" (click)='update()'>Editar</button>
+            <button class="btn btn-primary" role="button" (click)='update()'>
+              <i class="fas fa-user-edit"></i>
+              Editar</button>
           </ng-template>
         </div>
       </div>
